--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,18 +47,23 @@ dependencies:
   geekyants_flutter_gauges: ^1.0.3
   easy_date_timeline: ^1.1.3
 
-  video_player: ^2.4.3
-  chewie: ^1.5.0
+  # video_player: ^2.4.3
+  # chewie: ^1.5.0
 
   focus_on_it: ^2.0.1
   connectivity_plus: ^2.3.8
 
   flutter_session_manager: ^1.0.3
+  # shared_preferences: ^2.3.2
+
   screen_brightness: ^1.0.1
   path_provider: ^2.1.3
   shimmer: ^3.0.0
-  # shared_preferences: ^2.3.2
-
+  
+  webview_windows: ^0.4.0
+  window_manager: ^0.4.2
+  desktop_multi_window: ^0.2.0
+  desktop_lifecycle: ^0.1.1
   # url_launcher: ^6.2.4
 
 
